--- a/mystack.yaml
+++ b/mystack.yaml
@@ -40,14 +40,15 @@ runcmd:
   - echo "INSTALLED MONGODB"
   # only leave ssh, http/s open
   - ufw default deny
-  - ufw allow 22
-  - ufw allow 80
-  - ufw allow 443
+  - ufw allow 'OpenSSH'
+  - ufw allow 'Nginx Full'
   - ufw enable
   # mongodb with snap
   #- snap install mongo22 
   # node with snap as correct version not available with packages
   - snap install node --classic
+  # install pm2 for daemonizing the node app
+  - npm install pm2 -g
   # clone app from github
   - su -c 'cd ~ && git clone https://github.com/strokovnjaka/shroomate' - ubuntu
   # install dependencies
@@ -63,5 +64,10 @@ runcmd:
     JWT_SECRET=__JWT_SECRET__
     # MongoDB access
     MONGODB_ATLAS_URI=\"__MONGODB_ATLAS_URI__\"" > .env' - ubuntu
-  # start the app
-  - su -c 'cd ~/shroomate && npm start' - ubuntu
+  # start and stop the app
+  - su -c 'cd ~/shroomate && pm2 start app.js && pm2 save && pm2 startup systemd' - ubuntu
+  #- su -c 'cd ~/shroomate && pm2 start app.js' - ubuntu
+  # daemonize the app
+  - env PATH=$PATH:/snap/node/8007/bin /usr/local/lib/node_modules/pm2/bin/pm2 startup systemd -u ubuntu --hp /home/ubuntu
+  #- systemctl start pm2-ubuntu
+  #- su -c 'cd ~/shroomate && npm start &' - ubuntu
